# sh2perl

./: .cursorrules  .dockerignore  .gitignore  .max_tests_passed  000__04_basic_backtick_usage.sh  000__04_basic_backtick_usage.sh.ORIGINAL  000__04_basic_backtick_usage.sh.complex  000__04_basic_backtick_usage_simple.sh  BENCHMARK_README.md  Cargo.toml  DOCKER.md  Dockerfile  FIX.md  INSTALL.md  README-WASM.md  README.md  TODO.txt  __tmp_run.pl  after_test.txt  benchmark.bat  benchmark.ps1  benchmark_system.pl  build-wasm.sh  check_diffs.pl  clean.pl  clean.pl.ERR  clean_dead_code_safe.sh  clean_perl.pl  clean_perl.pl.ERR  clean_perl.pl.tdy  command_cache.json  comment_debug.sh  compare_code.pl  compare_perl_bash.pl  complete_perl.pl  complex_script.sh  complex_test.sh  config.txt  create_test_data.pl  current_perl.pl  (+110 more)
.devcontainer/: devcontainer.json
.test-work/: 035_orig.out  035_pure.pl  current_023.pl  purify-004-fixed.out  purify-004.out  purify-022-final.out  purify-022-final.run  purify-022-fixed.out  purify-022-fixed.run  purify-022.out  purify-023-check.pl  purify-023-fixed.out  purify-023-fixed.run  purify-run-1.txt
.tmp/: deleted_files.txt
bash_tests/: test_local_names_preserved.sh
commands/: date.rs
docs/: AST.md  indent.md  perlcritic.conf  perlcritic.conf.bak  tidyperl.conf
examples.impurl/: 000benchmark.pl.tmp  001_echo_basic.pl  001_echo_basic.pl.purified  001_echo_basic.pl.tmp  002_printf_basic.pl.tmp  003__ls_basic.pl  003__ls_basic.pl.tmp  003_ls_basic.pl  003_ls_basic.pl.tmp  008_date_basic.pl  009_sleep_basic.pl  010_which_basic.pl  011_grep_basic.pl  012_sed_basic.pl  013_awk_basic.pl  014_tr_basic.pl  015_cut_basic.pl  016_sort_basic.pl  017_uniq_basic.pl  018_paste_basic.pl  019_comm_basic.pl  020_diff_basic.pl  021_find_basic.pl  026_touch_basic.pl  029_xargs_basic.pl  031_time_basic.pl  032_kill_basic.pl  033_nice_basic.pl  034_nohup_basic.pl  035_pipeline_basic.pl  038_advanced_control_flow.pl  039_subshell_operations.pl  040_most_complex_example.pl  041_compression_network.pl  042_checksum_verification.pl  043_string_processing.pl  044_yes_command.pl  045_read_command.pl  046_perl_command.pl  047_advanced_pipelines.pl  (+5 more)
examples.out/: 000__01_file_directory_operations.sh.pl  000__02_output_formatting_commands.sh.pl  000__02_output_formatting_commands.sh.pl.tidied  000__03_file_manipulation_commands.sh.pl  000__03_tidied.pl  000__04_basic_backtick_usage.sh.pl  000__04_basic_backtick_usage_simple.sh.pl  000__04a_basic_command_substitution.sh.pl  000__04b_file_directory_operations.sh.pl  000__04c_text_processing_commands.sh.pl  000__04d_system_utilities.sh.pl  000__04e_file_manipulation.sh.pl  000__04f_output_formatting.sh.pl  000__04g_checksum_commands.sh.pl  000__04h_complex_examples.sh.pl  000__05_system_utilities.sh.pl  000__06_text_processing_commands.sh.pl  000__07_find_path_commands.sh.pl  000__backticks.sh.pl  001_simple.sh.pl  002_control_flow.sh.pl  003_pipeline.sh.pl  004_test_quoted.sh.pl  005_args.sh.pl  006_misc.sh.pl  007_cat_EOF.sh.pl  008_simple_backup.sh.pl  009_arrays.sh.pl  010_pattern_matching.sh.pl  011_brace_expansion.sh.pl  012_process_substitution.sh.pl  013_parameter_expansion.sh.pl  014_ansi_quoting.sh.pl  016_grep_basic.sh.pl  (+20 more)
(+705 files in other folders)
