[package]
name = "debashl"
version = "0.1.0"
edition = "2021"
default-run = "debashc"

[[bin]]
name = "debashc"
path = "src/main.rs"

[[bin]]
name = "test_arithmetic"
path = "test_arithmetic.rs"

[[bin]]
name = "test_lexer_debug"
path = "test_lexer_debug.rs"




[[bin]]
name = "convert_examples"
path = "src/bin/convert_examples.rs"


[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
logos = "0.13"
thiserror = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
md5 = "0.7"
regex = "1.0"

[dev-dependencies]
paste = "1.0"
